# CGAL_IN_HOU

./: README.md  README1.md
cmake/: HoudiniConfig.cmake  HoudiniConfigVersion.cmake
dso/: Heat_method_3.exp  Heat_method_3.lib  Inscribed_Areas.exp  Inscribed_Areas.lib  Mesh_Skeletonization.exp  Mesh_Skeletonization.lib  Ridges_Umbilics.exp  Ridges_Umbilics.lib  Triangulated_Mesh_Approximation.lib
sample/CGAL_Triangulated_Mesh_Approximation/: CMakeLists.txt  Triangulated_Mesh_Approximation.C  Triangulated_Mesh_Approximation.h  bear.hip
sample/Heat_method_3/: CMakeLists.txt  Heat_method_3.C  Heat_method_3.h
sample/Inscribed_Areas/: CMakeLists.txt  Inscribed_Areas.C  Inscribed_Areas.h  Inscribed_Areas.hip  citysample.hip
sample/Ridges_Umbilics/: CMakeLists.txt  Ridges_Umbilics.C  Ridges_Umbilics.h
sample/Surface_Mesh_Skeletonization/: CMakeLists.txt  Mesh_Skeletonization.C  Mesh_Skeletonization.h  README.md
